--- a/module1/bai4/baitap/taoCVcanhan/index.html
+++ b/module1/bai4/baitap/taoCVcanhan/index.html
@@ -38,11 +38,11 @@
             <h2>Kinh nghiệm:</h2>
             Chưa</li>
         <li>
+            <a href="https://www.google.com.vn/search" target="_blank" name="Định hướng phát triển cá nhân"/>
             <h2>Định hướng phát triển cá nhân:</h2>
             Đi du học</li>
     </ul>
     </p>
-<a href="index.html" target="_blank"</a>
 
 </body>
 </html>
