--- a/module1/bai5/baitap/taobangnangcao/calendar.html
+++ b/module1/bai5/baitap/taobangnangcao/calendar.html
@@ -1,10 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Tạo bảng nâng cao</title>
+  <style>
+    table{
+      font-size: 20px;
+      border-collapse: collapse;
+      width: 100%;
+    }
+    td,th {
+      border: 1px solid #dddddd;
+      text-align: center;
+      padding: 5px;
+    }
+    p{
+      font-family: "Arial Black";
+      font-size: 30px;
+      color: #0033CC;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-$END$
+<p>Tháng 10 - October</p>
+<form>
+  <table>
+    <tr>
+      <th>C.Nhật</th>
+      <th>T.Hai</th>
+      <th>T.Ba</th>
+      <th>T.Tư</th>
+      <th>T.Năm</th>
+      <th>T.Sáu</th>
+      <th>T.Bảy</th>
+    </tr>
+    <tr>
+      <td>Sun</td>
+      <td>Mon</td>
+      <td>Tue</td>
+      <td>Wed</td>
+      <td>Thu</td>
+      <td>Fri</td>
+      <td>Sat</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>1</td>
+      <td>2</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>5</td>
+      <td>6</td>
+      <td>7</td>
+      <td>8</td>
+      <td>9</td>
+      <td>10</td>
+    </tr>
+    <tr>
+      <td>11</td>
+      <td>12</td>
+      <td>13</td>
+      <td>14</td>
+      <td>15</td>
+      <td>16</td>
+      <td>17</td>
+    </tr>
+    <tr>
+      <td>18</td>
+      <td>19</td>
+      <td>20</td>
+      <td>21</td>
+      <td>22</td>
+      <td>23</td>
+      <td>24</td>
+    </tr>
+    <tr>
+      <td>25</td>
+      <td>26</td>
+      <td>27</td>
+      <td>28</td>
+      <td>29</td>
+      <td>30</td>
+      <td>31</td>
+    </tr>
+  </table>
+</form>
 </body>
 </html>
