--- a/module1/bai5_HTML Form & Table/baitap/taobangdongian/schedule.html
+++ b/module1/bai5_HTML Form & Table/baitap/taobangdongian/schedule.html
@@ -18,6 +18,12 @@
             border-collapse: collapse;
             width: 100%;
         }
+        table tr:nth-child(1) th:nth-child(n+2){
+            background-color: #fffe1f;
+        }
+        table tr:nth-child(2) th:nth-child(n+1){
+            background-color: #ffb527;
+        }
         td,th {
             border: 1px solid #dddddd;
             text-align: center;
