--- a/module1/bai7_Variable and data types/baitap/chuyendoitiente/chuyentien.html
+++ b/module1/bai7_Variable and data types/baitap/chuyendoitiente/chuyentien.html
@@ -3,46 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Chuyển đổi tiền tệ</title>
-    <style>
-        table tr:nth-child(2) td:nth-child(4){
-            background-color: #0033CC;
-        }
-    </style>
 </head>
 <body>
 <from>
-    <!--<table>
+    <table>
         <tr>
             <th>Amount</th>
             <th>From Curency</th>
             <th>To Currency</th>
         </tr>
         <tr>
-            <td><input type="number" name="Amount"/></td>
-            <td>
+            <td><input id="A" type="number" name="Amount"/></td>
+            <td id="B">
                 <select>
                     <option>VietNam</option>
                     <option>USD</option>
                 </select>
             </td>
-            <td>
+            <td id="C">
                 <select>
                     <option>USD</option>
                     <option>VietNam</option>
                 </select>
             </td>
-            <td>
-                <input type="button" name="btConvert" value="Convert">
-            </td>
+            <td><input type="button" onclick="Convert()" name="Convert" value="Convert"/></td>
         </tr>
-    </table>-->
+    </table>
+    <p id="result">Result :</p>
     <script>
-        let Amount;
-        let FromCurrency;
-        let ToCurrency = 23.000;
+        let Amount = document.getElementById("A");
+        let FromCurency = document.getElementById("B");
+        let ToCurency = document.getElementById("C")
 
-        let Convert = FromCurrency * ToCurrency;
-        document.write("số tiền đã đổi: ");
+        function Convert (){
+            let Convert;
+            Convert = parseFloat(Amount.value) *23.000;
+            document.getElementById("result").innerHTML = Convert;
+        }
     </script>
 </from>
 </body>
