--- a/module1/bai7_Variable and data types/baitap/bienkieudulieu/chuyennhietdo.html
+++ b/module1/bai7_Variable and data types/baitap/bienkieudulieu/chuyennhietdo.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <script>
-  let inputC;
-  inputC = prompt("nhập biến C:");
-  let C = parseInt(inputC);
+  let inputc;
+  inputc = prompt("nhập biến C:");
+  let c = parseInt(inputc);
 
-  let F = (9 * C)/5 + 32;
-  document.write("Nhiệt độ chuyển sang F: " + F);
+  let f = (9 * c)/5 + 32;
+  document.write("Nhiệt độ chuyển sang F: " + f);
 </script>
 </body>
 </html>
