--- a/module1/bai7_Variable and data types/baitap/bienkieudulieu/dientichhinhtron.html
+++ b/module1/bai7_Variable and data types/baitap/bienkieudulieu/dientichhinhtron.html
@@ -16,8 +16,8 @@
     if (r<=0){
         alert("nhập r > 0");
     } else {
-        let S = r * pi * r;
-        document.write("Diện tích hình tròn S = " + S);
+        let s = r * pi * r;
+        document.write("Diện tích hình tròn S = " + s);
     }
 </script>
 </body>
