--- a/module1/bai8_Conditional Statements/thuchanh/switch-case/bai1.html
+++ b/module1/bai8_Conditional Statements/thuchanh/switch-case/bai1.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <script>
+    let browser = prompt("Please type your");
   /*if (browser == 'Edge') {
     alert("You've got the Edge!");
   } else if (browser == 'Chrome' || browser == 'Firefox' || browser == 'Safari' || browser == 'Opera') {
