--- a/module1/bai8_Conditional Statements/thuchanh/switch-case/bai2.html
+++ b/module1/bai8_Conditional Statements/thuchanh/switch-case/bai2.html
@@ -6,32 +6,21 @@
 </head>
 <body>
 <script>
-  let a = prompt('a?', '');
+    let a = parseInt(prompt('a?', ''));
 
-  /*if (a == 0) {
-   alert(0);
- }
+    switch (a) {
+        case 0:
+            alert(0);
+            break;
+        case 1:
+            alert(1);
+            break;
+        case 2:
+        case 3:
+            alert('2,3');
+            break;
 
- if (a == 1) {
-   alert(1);
- }
-
- if (a == 2 || a == 3) {
-   alert('2,3');
- }*/
-
- switch (a) {
-   case 0:
-     alert(0);
-     break;
-   case 1:
-     alert(1);
-     break;
-   case 2:
-   case 3:
-     alert('2,3');
-     break;
- }
+    }
 </script>
 </body>
 </html>
