--- a/module1/bai8_Conditional Statements/thuchanh/switch-case/sign.html
+++ b/module1/bai8_Conditional Statements/thuchanh/switch-case/sign.html
@@ -16,17 +16,17 @@
     alert(0);
   }*/
 
-  switch (value) {
-   case 0:
+  switch ( (value >0) ? 1 : (value < 0) ? -1 :0)  {
+   case 1:
      alert(1);
      break;
-   case 0:
+   case -1:
      alert(-1);
      break;
    default:
      alert(0);
 
- }*/
+ }
 </script>
 </body>
 </html>
