--- a/module1/bai9_Conditional Statements 2/baitap/doyouloveme/doyouloveme.html
+++ b/module1/bai9_Conditional Statements 2/baitap/doyouloveme/doyouloveme.html
@@ -3,36 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>DoYouLoveMe</title>
-  <style>
-    #loveme {
-      position: absolute;
-      left: 180px;
-      top: 180px;
-      font-size: 50px;
-    }
-    input {
-      width: 100px;
-      font-size: 30px;
-      color: white;
-      padding: 10px 10px;
-      text-align: center;
-    }
-    #yes {
-      position: absolute;
-      left: 280px;
-      top: 280px;
-      color: black;
-    }
-    #no {
-      position: absolute;
-      left: 400px;
-      top: 280px;
-      color: black;
-    }
-  </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1 id="loveme">Do you love me?</h1>
+<h1 id="love">Do you love me?</h1>
 <canvas id="canvas"></canvas>
 <input type="button" id="yes" value="Yes" onclick="yesClick()" />
 <input type="button" id="no" value="No" onmouseover="noHover()" />
