--- a/module1/bai9_Conditional Statements 2/baitap/luyentap1/bai2.html
+++ b/module1/bai9_Conditional Statements 2/baitap/luyentap1/bai2.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Cấu trúc điều kiện 01</title>
 </head>
 <body>
-$END$
+<script>
+  let a = parseInt(prompt("Nhập số tuổi:"));
+
+  if (a >= 16){
+    alert("Đủ tuổi vào lớp 10: ");
+  } else {
+    alert("Không đủ tuổi vào lớp 10: ");
+  }
+</script>
 </body>
 </html>
