--- a/module1/bai9_Conditional Statements 2/baitap/luyentap1/bai1.html
+++ b/module1/bai9_Conditional Statements 2/baitap/luyentap1/bai1.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Cấu trúc điều kiện 01</title>
 </head>
 <body>
-$END$
+<script>
+  let a = parseInt(prompt("Nhập số a: "));
+  let b = parseInt(prompt("nhập số b: "));
+
+  let arel;
+      arel = a/b;
+  if(arel){
+    alert("a chia hết cho b");
+  } else {
+    alert("a không chia hết cho b")
+  }
+</script>
 </body>
 </html>
