--- a/module1/bai9_Conditional Statements 2/baitap/luyentap1/bai3.html
+++ b/module1/bai9_Conditional Statements 2/baitap/luyentap1/bai3.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Cấu trúc điều kiện 01</title>
 </head>
 <body>
-$END$
+<script>
+ let a = parseInt(prompt("Nhập số nguyên:"));
+
+ if (a>0){
+     alert("Số lớn hơn 0");
+ }else {
+     alert("số nhỏ hơn 0")
+ }
+</script>
 </body>
 </html>
