--- a/module1/bai9_Conditional Statements 2/baitap/luyentap1/bai4.html
+++ b/module1/bai9_Conditional Statements 2/baitap/luyentap1/bai4.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Cấu trúc điều kiện 01</title>
 </head>
 <body>
-$END$
+<script>
+  let a = parseInt(prompt("Nhập số a:"));
+  let b = parseInt(prompt("Nhập số b:"));
+  let c = parseInt(prompt("nhập số c:"));
+
+  let max =a;
+  if(a>max){
+      alert(a = max);
+  }else if(b>max){
+      alert(max = b);
+  }else {
+      alert(max = c);
+  }
+</script>
 </body>
 </html>
