--- a/module1/bai11_Loop 2/baitap/bangcuuchuong/cuuchuong.html
+++ b/module1/bai11_Loop 2/baitap/bangcuuchuong/cuuchuong.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Bảng cửu chương</title>
 </head>
 <body>
-$END$
+<script>
+    let table ;
+    document.write("<table border=1 width=100%>")
+    let i;
+      for(i =1; i<=10; i++){
+          document.write("<tr>")
+          let n;
+          for(n=2;n<=9;n++)
+              document.write("<td>" + n + "x" + i + "=" + (n*i));
+              //document.write("</td>");
+              //document.write("</tr>")
+  }
+      document.write("</tr></table>")
+
+</script>
 </body>
 </html>
