--- a/module1/bai11_Loop 2/baitap/luyentap2/tamgiac.html
+++ b/module1/bai11_Loop 2/baitap/luyentap2/tamgiac.html
@@ -6,16 +6,17 @@
 </head>
 <body>
 <script>
-  for(let j=0; j<5; j++){
-    for(let i=0; i<=j; i++){
+    document.write("<div style='width: 100px' align='right'>");
+  for (let i=0; i<5; i++){
+    for (let j=0;j<=i;j++){
       document.write("*")
     }
     document.writeln("<br>");
   }
   document.write("<br>");
-  //document.write("<div style='width: 100px' align='right'>")
-  for(let j=5;j>0;j--){
-    for(let i=0;i<j;i++){
+  document.write("<div style='width: 100px' align='right'>");
+  for(let i=5;i>0;i--){
+    for(let j=i;j>0;j--){
       document.writeln("*");
 
     }
