--- a/module1/bai12_Array/thuchanh/timgiatri/value.html
+++ b/module1/bai12_Array/thuchanh/timgiatri/value.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 <script>
-    let vale = prompt("Enter a number: ");
-    let number = [-3, 5, 1, 3, 2, 10];
+    let value = prompt("Enter a number: ");
+    let numbers = [-3, 5, 1, 3, 2, 10];
     for (let i = 0; i < numbers.length; i++) {
         if (value == numbers[i]) {
+            alert("Value " + numbers[i] + "found at " + i);
         }
     }
-    alert("Value " + numbers[i] + "found at " + i);
     </script>
 </body>
 </html>
