--- a/module1/bai13_Array2/baitap/luyentapmang1/bai4.html
+++ b/module1/bai13_Array2/baitap/luyentapmang1/bai4.html
@@ -7,7 +7,9 @@
 <body>
 <script>
   let x = [-8, 5, 4, 1, 3, 2, 10, 15];
-  console.log(x.reverse());
+  for(let i=0; i<x.length; i++){
+      alert(x.reverse());
+  }
 </script>
 </body>
 </html>
