--- a/module1/bai13_Array2/baitap/luyentapmang1/bai5.html
+++ b/module1/bai13_Array2/baitap/luyentapmang1/bai5.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Luyện tập mảng 01</title>
 </head>
 <body>
 <script>
-    let a = [-1, -4, -5, -9, -8, -10];
-    let dem= a.length;
-    document.write(dem);
+    let a = [-1, -4, -5, -9, 8, 10, -11, 9];
+    let dem= a[0];
+    for(let i=0; i<a.length; i++){
+      if(a[i]<0){
+          dem++;
+      }
+    }
+    document.write("Đếm số âm là: " + dem);
 </script>
 </body>
 </html>
