--- a/module1/bai13_Array2/baitap/luyentapmang1/bai8.html
+++ b/module1/bai13_Array2/baitap/luyentapmang1/bai8.html
@@ -8,7 +8,7 @@
 <script>
   let number = [2, 5, 7, 6, 10, 4, 8, 1, 3, 9];
   alert(number.sort(function (a, b) {
-    return a - b;}));
+    return b - a;}));
 </script>
 </body>
 </html>
