--- a/module1/bai13_Array2/baitap/luyentapmang1/bai6.html
+++ b/module1/bai13_Array2/baitap/luyentapmang1/bai6.html
@@ -8,14 +8,18 @@
 <script>
   let a = [2, 5, 6, 8, 9, 15, 10, 14, 1, 4];
   let v = prompt("nhập số: ");
-  for(let i=0; i<a.length; i++){
-    /*if(v=a[i]){
+  let flag = false;
+  for(let i=0; i<a.length; i++) {
+      if (v == a[i]) {
+          flag = true;
+      }
+  }
+    if(flag){
       alert("V is in the array");
-    } else if(v !=a[i]){
+    } else {
       alert("V is not in the array");
     }
-  }
-  document.write("array " + v);*/
+
 </script>
 </body>
 </html>
