--- a/module1/bai15_Function2/baitap/luyentap1/bai1.html
+++ b/module1/bai15_Function2/baitap/luyentap1/bai1.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Luyện tập tạo và sử dụng hàm 01</title>
 </head>
 <body>
-$END$
+<script>
+    function alertMessage(){}
+    {
+        alert("Xin chào");
+    }
+</script>
 </body>
 </html>
