--- a/module1/bai15_Function2/baitap/luyentap1/bai2.html
+++ b/module1/bai15_Function2/baitap/luyentap1/bai2.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Luyện tập tạo và sử dụng hàm 01</title>
 </head>
 <body>
-$END$
+<script>
+    function tanggiatri(number)//tham số
+    {
+        return number;
+    }
+    let num = prompt("nhập giá trị: ");
+    tanggiatri(num); //đối số
+    num ++;
+    document.write(num);
+</script>
 </body>
 </html>
