--- a/module1/bai15_Function2/baitap/luyentap1/bai4.html
+++ b/module1/bai15_Function2/baitap/luyentap1/bai4.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Luyện tập tạo và sử dụng hàm 01</title>
 </head>
 <body>
-$END$
+<script>// chưa xong
+  function addNumbers() {
+    firstNum = 4;
+    secondNum = 8;
+    result = firstNum + secondNum;
+    return result;
+  }
+  let firstNum;
+  let secondNum;
+  let result;
+  result = 0;
+  result = addNumbers();
+</script>
 </body>
 </html>
