--- a/module1/bai15_Function2/baitap/luyentap1/bai3.html
+++ b/module1/bai15_Function2/baitap/luyentap1/bai3.html
@@ -5,7 +5,7 @@
     <title>Luyện tập tạo và sử dụng hàm 01</title>
 </head>
 <body>
-<script>// chưa xong
+<script>
   function thamso(number1, number2){
     if(number1 > number2){
       alert("số thứ nhất lớn hơn");
