--- a/module1/bai15_Function2/baitap/luyentap1/bai4.html
+++ b/module1/bai15_Function2/baitap/luyentap1/bai4.html
@@ -5,7 +5,7 @@
     <title>Luyện tập tạo và sử dụng hàm 01</title>
 </head>
 <body>
-<script>// chưa xong
+<script>
   function addNumbers() {
     firstNum = 4;
     secondNum = 8;
@@ -17,6 +17,7 @@
   let result;
   result = 0;
   result = addNumbers();
+  alert(result);
 </script>
 </body>
 </html>
