--- a/module1/bai16_OOP/thuchanh/xaydunghinhtron/circle.html
+++ b/module1/bai16_OOP/thuchanh/xaydunghinhtron/circle.html
@@ -21,7 +21,10 @@
   let radius = circle.getRadius(); // 2
 
   let area = circle.getArea(); // 12.566370614359172
-  alert("radius: " + radius + "; area: " + area);
+  this.getCircle=function () {
+      alert("radius: " + radius + "; area: " + area);
+  }
+
 </script>
 </body>
 </html>
