--- a/module1/bai16_OOP/thuchanh/xaydunglopdate/lopdate.html
+++ b/module1/bai16_OOP/thuchanh/xaydunglopdate/lopdate.html
@@ -6,35 +6,52 @@
 </head>
 <body>
 <script>
-  let MyDate = function(day, month, year) {
+    let MyDate = function(day, month, year) {
 
-    this.day = day;
+        this.day = day;
 
-    this.month = month;
+        this.month = month;
 
-    this.year = year;
+        this.year = year;
 
-  };
-  this.getDay = function() {
-    return this.day;
-  }
-  this.getMonth = function() {
-    return this.month;
-  }
-  this.getYear = function() {
-    return this.year;
-  }
-  this.setDay = function(day) {
-    this.day  = day;
-  }
-  this.setMonth = function(month) {
-    this.month  = month;
-  }
-  this.setYear = function(year) {
-    this.year  = year;
-  }
-  let date = new MyDate(2, 2, 2007);
-  alert(day + "/" + month + "/" + year);
+        this.getDay = function() {
+            return this.day;
+        }
+        this.getMonth = function() {
+            return this.month;
+        }
+        this.getYear = function() {
+            return this.year;
+        }
+        this.getDate=function (){
+            alert(this.day+"/"+this.month+"/"+this.year)
+
+        }
+
+        this.setDay = function(day) {
+            this.day  = day;
+        }
+        this.setMonth = function(month) {
+            this.month  = month;
+        }
+        this.setYear = function(year) {
+            this.year  = year;
+        }
+        this.setDate =function (day,month,year){
+            this.day=day;
+            this.month = month;
+            this.year = year;
+
+        }
+        this.toString=function (){
+            return this.day+"/"+this.month+"/"+this.year;
+        }
+
+    };
+
+    let date = new MyDate(4,3,2004);
+    alert(date.toString());
+
 </script>
 </body>
 </html>
