--- a/CASESTUDY/yeucau1/bai2/hinhtamgiac.html
+++ b/CASESTUDY/yeucau1/bai2/hinhtamgiac.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Vẽ tam giác vuông cân</title>
 </head>
 <body>
-$END$
+<script>
+  for (let i=0; i<5; i++) {
+    for (let j = 0; j <= i; j++) {
+      if (i === 0 || i === 4 || j === 0 || j === i) {
+        document.write("*&nbsp")
+      } else {
+        document.writeln("&nbsp&nbsp");
+      }
+    }
+    document.write("</br>");
+  }
+</script>
 </body>
 </html>
