--- a/module1/bai17_OOP2/baitap/diemkhienTV/RemoteTV.html
+++ b/module1/bai17_OOP2/baitap/diemkhienTV/RemoteTV.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>RemoteTV</title>
 </head>
 <body>
 <script>
