--- a/module1/bai17_OOP2/baitap/gamedongian/game.html
+++ b/module1/bai17_OOP2/baitap/gamedongian/game.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Game đơn giản</title>
 </head>
 <body>
-$END$
+<div id="game"></div>
+<script>
+  function Hero(image, top, left, size, speed){
+    this.image = image;
+    this.top = top;
+    this.left = left;
+    this.size = size;
+    this.speed = speed;
+
+    this.getHeroElement = function(){
+      return '<img width="'+ this.size + '"' +
+              ' height="'+ this.size + '"' +
+              ' src="' + this.image +'"' +
+              ' style="top: '+this.top+'px; left:'+this.left+'px;position:absolute;" />';
+    }
+
+    this.moveRight = function(){
+      this.left += 20;
+      this.speed +=30;
+      console.log('ok: ' + this.left + " tocdo " + this.speed);
+    }
+
+  }
+
+  let hero = new Hero('cute-de-thuong-nhat.png', 20, 30, 200, 50);
+
+  function start(){
+    if(hero.left < window.innerWidth - hero.size){
+      hero.moveRight();
+    }
+    document.getElementById('game').innerHTML = hero.getHeroElement();
+    setTimeout(start, 500)
+  }
+
+  start();
+</script>
 </body>
 </html>
