--- a/module1/bai17_OOP2/baitap/meobatchuot/Cat_catch_Mouse.html
+++ b/module1/bai17_OOP2/baitap/meobatchuot/Cat_catch_Mouse.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Cat_catch_Mouse</title>
 </head>
 <body>
 
