--- a/CASESTUDY/yeucau3/bai4.html
+++ b/CASESTUDY/yeucau3/bai4.html
@@ -6,41 +6,44 @@
 </head>
 <body>
 <script>
-  let so = prompt("nhập số");
-      switch(so) {
-          case 0:
-              document.write("Không");
-              break;
-          case 1:
-              document.write("Một");
-              break;
-          case 2:
-              document.write("Hai");
-              break;
-          case 3:
-              document.write("Ba");
-              break;
-          case 4:
-              document.write("Bốn");
-              break;
-          case 5:
-              document.write("Năm");
-              break;
-          case 6:
-              document.write("Sáu");
-              break;
-          case 7:
-              document.write("Bảy");
-              break;
-          case 8:
-              document.write("Tám");
-              break;
-          case 9:
-              document.write("Chín");
-              break;
-              default:
-                  document.write("số đã nhập không hợp lệ");
-  }
+    let so = prompt("nhập so: ");
+    let i = 0;
+
+    while (i<so.length){
+        switch(so[i]) {
+            case '0':
+                document.write("Không");
+                break;
+            case '1':
+                document.write(" Một");
+                break;
+            case '2':
+                document.write(" Hai");
+                break;
+            case '3':
+                document.write(" Ba");
+                break;
+            case '4':
+                document.write(" Bốn");
+                break;
+            case '5':
+                document.write(" Năm");
+                break;
+            case '6':
+                document.write(" Sáu");
+                break;
+            case '7':
+                document.write(" Bảy");
+                break;
+            case '8':
+                document.write(" Tám");
+                break;
+            case '9':
+                document.write(" Chín");
+                break;
+        }
+        i++;
+    }
 
 </script>
 </body>
