--- a/module1/bai13_Array2/baitap/tudien/tudien.html
+++ b/module1/bai13_Array2/baitap/tudien/tudien.html
@@ -25,7 +25,7 @@
                 document.getElementById("viet").innerHTML = mTV[i];
                 break;
             } else {
-                count++
+                count++;
             }
         }
         if (count != 0) {
