--- a/module11/a0721-function/test_print_10_prime_number.html
+++ b/module11/a0721-function/test_print_10_prime_number.html
@@ -40,7 +40,7 @@
         }
         // end check prime number
 
-        if (countPrime === 10) {
+        if (countPrime == 10) {
             break;
         }
 
