--- a/module1/bai11_Loop 2/baitap/luyentap1/bai5.html
+++ b/module1/bai11_Loop 2/baitap/luyentap1/bai5.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Fibonacci</title>
 </head>
 <body>
-$END$
+<script>
+  let f0=1,f1=1;
+  let f=f0+f1;
+  let fibonacci=f0+"  "+f1+" "+f+" ";
+  let sum=0;
+  for (let i=0; i<17;i++){
+    f0=f1;
+    f1=f;
+    f=f0+f1;
+    fibonacci+=f+" ";
+    sum +=f;
+  }
+  document.write("Dãy Fibonacci là "+fibonacci+"<br>")
+  document.write("Tổng các số = "+sum)
+</script>
 </body>
 </html>
