--- a/module1/bai14_Function/thuchanh/giatrinhocuamang/giatrinhonhat.html
+++ b/module1/bai14_Function/thuchanh/giatrinhocuamang/giatrinhonhat.html
@@ -8,7 +8,7 @@
 <script>
 
   //let arr1 = [3, 5, 1, 8, -3, 7, 8];
-  let arr2 = [0, 0, 0, 0, 0, 0];
+  let arr2 = [7, 12, 6, 9, 20, 56, 89];
   let min = minArray(arr2);
   alert(min);
 
